--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,6 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts.css");
-
-
+/*попап*/
 @import url("../blocks/popup/popup.css");
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__close/popup__close.css");
@@ -11,13 +10,13 @@
 @import url("../blocks/profile-edit/__personal/profile-edit__personal.css");
 @import url("../blocks/profile-edit/__title/profile-edit__title.css");
 @import url("../blocks/save/save.css");
-
+/*страница*/
 @import url("../blocks/page/page.css");
 @import url("../blocks/content/content.css");
-
+/*хэдэр*/
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
-
+/*профиль*/
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__about/profile__about.css");
@@ -26,14 +25,14 @@
 @import url("../blocks/profile/__name/profile__name.css");
 @import url("../blocks/add-button/add-button.css");
 @import url("../blocks/edit-button/edit-button.css");
-
+/*элементы*/
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__info/element__info.css");
 @import url("../blocks/element/__name/element__name.css");
 @import url("../blocks/element/__photo/element__photo.css");
-
+/*лайк*/
 @import url("../blocks/like/like.css");
-
+/*футер*/
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
