--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,3 +2,11 @@
   max-width: 880px;
   width: 100%;
 }
+
+@media screen and (max-width: 918px) {
+  .content {
+    padding-left: 19px;
+    padding-right: 19px;
+    box-sizing: border-box;
+  }
+}
