--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,9 +1,10 @@
 .footer__copyright {
   color: #545454;
   margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 14px;
 }
 
 @media screen and (max-width: 320px) {
