--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,6 +8,10 @@
   cursor: pointer;
 }
 
+.popup__close:hover {
+  opacity: .6;
+}
+
 @media screen and (max-width: 508px) {
   .popup__close {
     max-width: 20px;
