--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   border-bottom: 1px solid #000;
+  opacity: .2;
   padding-bottom: 9px;
   font-family: inherit;
   font-weight: 400;
