--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.edit-button {
+.profile__edit-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,12 +9,12 @@
   cursor: pointer;
 }
 
-.edit-button:hover {
+.profile__edit-button:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 336px) {
-  .edit-button {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
   }
