--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-  width: 150px;
+  min-width: 150px;
   height: 50px;
   padding: 0;
   box-sizing: border-box;
@@ -13,7 +13,7 @@
   opacity: .6;
 }
 
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 536px) {
   .profile__add-button {
     width: 282px;
   }
