--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,4 +1,5 @@
 .profile__name {
+  max-width: 294px;
   margin: 0;
   font-weight: 500;
   font-size: 42px;
@@ -8,8 +9,9 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 336px) {
+@media screen and (max-width: 536px) {
   .profile__name {
+    max-width: 189px;
     font-size: 27px;
     line-height: 33px;
   }
