--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -5,11 +5,13 @@
   min-width: 22px;
   height: 19px;
   background-image: url("../../../images/like.svg");
+  transition: .3s;
   cursor: pointer;
 }
 
 .element__like:hover {
   opacity: .5;
+  animation: heartbeat .7s linear infinite;
 }
 
 .element__like:active {
