--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.profile-edit__title {
+.popup__title {
   color:#000;
   margin: 0;
   padding-bottom: 24px;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 508px) {
-  .profile-edit__title {
+  .popup__title {
     font-size: 18px;
     line-height: 22px;
     padding-bottom: 45px;
