--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,14 @@
 .popup {
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
   position: fixed;
   top: 0;
+  z-index: 1;
+  transition: visibility .4s, opacity .4s linear;
 }
