--- a/pages/index.css
+++ b/pages/index.css
@@ -1,15 +1,22 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts.css");
+@import url("../vendor/animations.css");
 /*попап*/
 @import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__close/popup__close.css");
+@import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__close-icon/popup__close-icon.css");
 @import url("../blocks/popup/__item/popup__item.css");
-@import url("../blocks/profile-edit/profile-edit.css");
-@import url("../blocks/profile-edit/__personal/profile-edit__personal.css");
-@import url("../blocks/profile-edit/__title/profile-edit__title.css");
-@import url("../blocks/profile-edit/__save/profile-edit__save.css");
+@import url("../blocks/popup/__fieldset/popup__fieldset.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__save/popup__save.css");
+/*попап фото*/
+@import url("../blocks/popup-image/__container/popup-image__container.css");
+@import url("../blocks/popup-image/__figure/popup-image__figure.css");
+@import url("../blocks/popup-image/__image/popup-image__image.css");
+@import url("../blocks/popup-image/__caption/popup-image__caption.css");
 /*страница*/
 @import url("../blocks/page/page.css");
 @import url("../blocks/content/content.css");
@@ -33,6 +40,8 @@
 @import url("../blocks/element/__name/element__name.css");
 @import url("../blocks/element/__photo/element__photo.css");
 @import url("../blocks/element/__like/element__like.css");
+@import url("../blocks/element/__like/_active/element__like_active.css");
+@import url("../blocks/element/__delete/element__delete.css");
 /*футер*/
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
