--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -3,14 +3,12 @@
   border: 0;
   margin: 0;
   padding: 0;
-  border-bottom: 1px solid #000;
-  opacity: .2;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   padding-bottom: 9px;
   font-family: inherit;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
-  opacity: 1;
 }
 
 @media screen and (max-width: 508px) {
@@ -18,3 +16,8 @@
     width: 100%;
   }
 }
+
+.popup__item::-webkit-input-placeholder {color: #c4c4c4;}
+.popup__item::-moz-placeholder          {color: #c4c4c4;}
+.popup__item::-ms-input-placeholder     {color: #c4c4c4;}
+.popup__item::placeholder               {color: #c4c4c4;}
