--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,7 @@
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__save/popup__save.css");
 /*попап фото*/
+@import url("../blocks/popup-image/popup-image.css");
 @import url("../blocks/popup-image/__container/popup-image__container.css");
 @import url("../blocks/popup-image/__figure/popup-image__figure.css");
 @import url("../blocks/popup-image/__image/popup-image__image.css");
