--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-width: 282px;
-  position: absolute;
+  position: relative;
 }
 
 @media screen and (max-width: 508px) {
