--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,9 +9,13 @@
 @import url("../blocks/popup/__form/popup__form.css");
 @import url("../blocks/popup/__close-icon/popup__close-icon.css");
 @import url("../blocks/popup/__item/popup__item.css");
+@import url("../blocks/popup/__item/_type/popup__item_type_error.css");
 @import url("../blocks/popup/__fieldset/popup__fieldset.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__save/popup__save.css");
+@import url("../blocks/popup/__save/_inactive/popup__save_inactive.css");
+@import url("../blocks/popup/__error/popup__error.css");
+@import url("../blocks/popup/__error/_visible/popup__error_visible.css");
 /*попап фото*/
 @import url("../blocks/popup-image/popup-image.css");
 @import url("../blocks/popup-image/__container/popup-image__container.css");
