--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,16 +1,17 @@
 .popup__title {
   color:#000;
   margin: 0;
-  padding-bottom: 24px;
+  padding-bottom: 54px;
   font-weight: 900;
   font-size: 24px;
   line-height: 23px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 508px) {
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    padding-bottom: 45px;
+    padding-bottom: 75px;
   }
 }
