--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -2,19 +2,9 @@
   margin: 0;
   max-width: 430px;
   box-sizing: border-box;
-  gap: 0;
   width: 100%;
-  background-color: #fff;
   border: 0;
-  padding: 34px 36px 37px 36px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
-}
-
-@media screen and (max-width: 508px) {
-  .popup__form {
-    padding: 25px 22px;
-  }
+  margin-top: 34px;
 }
