--- a/src/blocks/element/__info/element__info.css
+++ b/src/blocks/element/__info/element__info.css
@@ -1,10 +1,18 @@
 .element__info {
   margin: 0;
-  padding: 25px 20px 31px 21px;
+  padding: 22px 20px 22px 21px;
+  box-sizing: border-box;
   background-color: #fff;
   color: #000;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  grid-template-rows: repeat(2, max-content);
   justify-content: space-between;
+  align-content: space-between;
+  align-items: center;
+  gap: 3px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  grid-template-areas: "name like"
+                       "name likes-number";
 }
