--- a/src/blocks/element/__name/element__name.css
+++ b/src/blocks/element/__name/element__name.css
@@ -1,8 +1,9 @@
 .element__name {
+  grid-area: name;
   margin: 0;
   font-weight: 900;
   font-size: 24px;
-  line-height: 23px;
+  line-height: 29px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
