--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,13 +1,17 @@
 .popup__container {
-  display: flex;
-  flex-direction: column;
+  max-width: 430px;
+  box-sizing: border-box;
   min-width: 282px;
+  position: relative;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 34px 36px 37px 36px;
   position: relative;
 }
 
 @media screen and (max-width: 508px) {
   .popup__container {
+    padding: 25px 22px;
     width: calc(100% - 38px);
-    gap: 16px;
   }
 }
