--- a/src/blocks/element/__info/element__info.css
+++ b/src/blocks/element/__info/element__info.css
@@ -5,7 +5,7 @@
   background-color: #fff;
   color: #000;
   display: grid;
-  grid-template-columns: repeat(2, max-content);
+  grid-template-columns: calc(100% - 22px) 22px;
   grid-template-rows: repeat(2, max-content);
   justify-content: space-between;
   align-content: space-between;
