--- a/src/blocks/profile/__name/profile__name.css
+++ b/src/blocks/profile/__name/profile__name.css
@@ -1,5 +1,11 @@
 .profile__name {
-  max-width: 300px;
+  /* изменено Александром */
+  width: 100%;
+  max-width: 536px;
+
+  /* Так было до изменения */
+  /* max-width: 300px; */
+
   margin: 0;
   font-weight: 500;
   font-size: 42px;
