--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,13 +1,7 @@
 .profile__info {
   margin-left: 30px;
   display: grid;
-
-  /* изменено Александром */
-  grid-template-columns: fit-content(546px) min-content;
-
-  /* Так было до изменения */
-  /*grid-template-columns: repeat(2, minmax(24px, min-content));*/
-
+  grid-template-columns: repeat(2, minmax(24px, min-content));
   grid-template-rows: repeat(2, min-content);
   gap: 18px 16px;
   align-items: center;
