--- a/main.css
+++ b/main.css
@@ -16,19 +16,22 @@
 .popup-image__container{display:flex;flex-direction:column;margin:auto;position:absolute;z-index:1}
 .popup-image__figure{display:flex;flex-direction:column;gap:10px;margin:0;padding:0}
 .popup-image__image{margin:0;max-height:75vh;max-width:75vw;padding:0}
-.popup-image__caption{font-size:12px;font-weight:400;line-height:12px}
+.popup-image__caption{font-size:12px;font-weight:400;line-height:12px;margin:0}
+.popup-image__name{margin:0 0 5px}
+.popup-image__owner{margin:0}
 .page{align-items:center;background-color:#000;color:#fff;display:flex;flex-direction:column;font-family:Inter,Arial,sans-serif;justify-content:center;padding-bottom:60px;padding-top:45px;width:100%}@media screen and (max-width:320px){.page{padding-bottom:36px;padding-top:28px}}
 .page_loading{background-color:#000;background-image:url(03b78ada3425e9132ff3.svg);background-position:50%;background-repeat:no-repeat;background-size:30%;height:100vh;position:fixed;top:0;transition:visibility .4s,opacity .4s linear;width:100vw}
 .content{max-width:880px;width:100%}@media screen and (max-width:918px){.content{box-sizing:border-box;padding-left:19px;padding-right:19px}}
 .header{border-bottom:1px solid #545454;max-width:880px;width:100%}
 .header__logo{margin-bottom:41px;max-width:142px}@media screen and (max-width:918px){.header__logo{margin-left:27px}}@media screen and (max-width:320px){.header__logo{height:24.4px;margin-bottom:31.6px;max-width:103.74px}}
-.profile{align-items:center;display:flex;justify-content:space-between;padding:40px 0 51px}@media screen and (max-width:536px){.profile{flex-direction:column;padding:42px 0 36px}}
-.profile__avatar-button{background-color:transparent;border:none;cursor:pointer;height:120px;margin:0;padding:0;position:relative;width:120px}.profile__avatar-button:hover:after{background-color:rgba(0,0,0,.8);background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;border-radius:50%;content:"";display:block;height:120px;left:0;position:absolute;top:0;width:120px}
-.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;width:120px}
+.profile{align-items:center;display:flex;gap:20px;justify-content:space-between;padding:40px 0 51px}@media screen and (max-width:536px){.profile{flex-direction:column;padding:42px 0 36px}}
+.profile__avatar-button{background-color:rgba(0,0,0,.8);background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:20%;border:none;cursor:pointer;height:100%;left:0;margin:0;opacity:0;padding:0;position:absolute;top:0;transition:.3s;width:100%}.profile__avatar-button:hover{opacity:1}
+.profile__avatar{border-radius:50%;box-sizing:border-box;height:120px;margin:0 auto;-o-object-fit:cover;object-fit:cover;padding:0;width:120px}
+.profile__avatar-box{box-sizing:border-box;margin:0 auto;padding:0;position:relative}
 .profile__about{font-size:18px;font-weight:400;line-height:18px;margin:0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:536px){.profile__about{font-size:14px;line-height:14px;max-width:282px}}
 .profile__data{align-items:center;display:flex;justify-content:center}@media screen and (max-width:536px){.profile__data{flex-direction:column}}
-.profile__info{align-items:center;display:grid;gap:18px 16px;grid-template-columns:repeat(2,minmax(24px,min-content));grid-template-rows:repeat(2,min-content);margin-left:30px}@media screen and (max-width:536px){.profile__info{gap:14px 10px;justify-items:center;margin-bottom:36px;margin-left:0;margin-top:26px}}
-.profile__name{font-size:42px;font-weight:500;line-height:48px;margin:0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:536px){.profile__name{font-size:27px;line-height:33px;max-width:189px}}
+.profile__info{align-items:center;display:grid;gap:18px 16px;grid-template-columns:fit-content(546px) min-content;grid-template-rows:repeat(2,min-content);margin-left:30px}@media screen and (max-width:536px){.profile__info{gap:14px 10px;justify-items:center;margin-bottom:36px;margin-left:0;margin-top:26px}}
+.profile__name{font-size:42px;font-weight:500;line-height:48px;margin:0;max-width:536px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;width:100%}@media screen and (max-width:536px){.profile__name{font-size:27px;line-height:33px;max-width:189px}}
 .profile__add-button{background-color:#000;border:2px solid #fff;box-sizing:border-box;cursor:pointer;height:50px;min-width:150px;-o-object-fit:cover;object-fit:cover;padding:0;transition:.3s}.profile__add-button:hover{opacity:.6}@media screen and (max-width:536px){.profile__add-button{width:282px}}
 .profile__edit-button{align-items:center;background-color:#000;border:1px solid #fff;cursor:pointer;display:flex;height:24px;justify-content:center;transition:.3s;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:536px){.profile__edit-button{height:18px;width:18px}}
 .elements{max-width:880px;width:100%}
